--- a/toh-pt6/package.json
+++ b/toh-pt6/package.json
@@ -22,6 +22,11 @@
     "@angular/platform-browser-dynamic": "17.0.0",
     "@angular/router": "17.0.0",
     "angular-in-memory-web-api": "~0.16.0",
+    "chart.js": "^4.4.1",
+    "install": "^0.13.0",
+    "ng2-charts": "^5.0.4",
+    "npm": "^10.2.5",
+    "or": "^0.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
