--- a/toh-pt6/package.json
+++ b/toh-pt6/package.json
@@ -28,6 +28,7 @@
     "npm": "^10.2.5",
     "or": "^0.2.0",
     "rxjs": "~7.8.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
   },
