--- a/EmotionFrontend/angular.json
+++ b/EmotionFrontend/angular.json
@@ -22,7 +22,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ng-devui/devui.min.css"
             ],
             "scripts": []
           },
