--- a/EmotionFrontend/package.json
+++ b/EmotionFrontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "17.0.0",
     "angular-in-memory-web-api": "~0.16.0",
     "chart.js": "^4.4.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "install": "^0.13.0",
     "ng-devui": "^16.2.0",
     "ng2-charts": "^5.0.4",
