--- a/EmotionFrontend/package.json
+++ b/EmotionFrontend/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "17.0.0",
     "@angular/platform-browser-dynamic": "17.0.0",
     "@angular/router": "17.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "angular-in-memory-web-api": "~0.16.0",
+    "angular-simple-scroll-spy": "^0.0.3",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "install": "^0.13.0",
