--- a/EmotionFrontend/angular.json
+++ b/EmotionFrontend/angular.json
@@ -23,6 +23,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ng-devui/devui.min.css"
             ],
             "scripts": []
