--- a/EmotionFrontend/package.json
+++ b/EmotionFrontend/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "17.0.0",
+    "@angular/cdk": "^17.0.5",
     "@angular/common": "17.0.0",
     "@angular/compiler": "17.0.0",
     "@angular/core": "17.0.0",
@@ -24,9 +25,11 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "angular-in-memory-web-api": "~0.16.0",
     "angular-simple-scroll-spy": "^0.0.3",
+    "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "install": "^0.13.0",
+    "mdb-angular-ui-kit": "^5.2.0",
     "ng-devui": "^16.2.0",
     "ng2-charts": "^5.0.4",
     "npm": "^10.2.5",
