--- a/EmotionFrontend/angular.json
+++ b/EmotionFrontend/angular.json
@@ -22,6 +22,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ng-devui/devui.min.css"
