--- a/EmotionFrontend/package.json
+++ b/EmotionFrontend/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "17.0.0",
     "@angular/core": "17.0.0",
     "@angular/forms": "17.0.0",
+    "@angular/material": "^17.0.5",
     "@angular/platform-browser": "17.0.0",
     "@angular/platform-browser-dynamic": "17.0.0",
     "@angular/router": "17.0.0",
@@ -30,7 +31,9 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "install": "^0.13.0",
     "mdb-angular-ui-kit": "^5.2.0",
+    "moment": "^2.30.1",
     "ng-devui": "^16.2.0",
+    "ng-zorro-antd": "^17.1.0",
     "ng2-charts": "^5.0.4",
     "npm": "^10.2.5",
     "or": "^0.2.0",
