--- a/EmotionFrontend/package.json
+++ b/EmotionFrontend/package.json
@@ -44,7 +44,7 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.0.0",
+    "@angular-devkit/build-angular": "^17.1.1",
     "@angular/cli": "17.0.0",
     "@angular/compiler-cli": "17.0.0",
     "@types/jasmine": "~5.1.0",
@@ -58,7 +58,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~10.9.0",
     "typescript": "~4.9.3"
   }
