--- a/EmotionFrontend/package.json
+++ b/EmotionFrontend/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "17.0.0",
     "@angular/platform-browser-dynamic": "17.0.0",
     "@angular/router": "17.0.0",
+    "@ant-design/icons-angular": "^17.0.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "angular-in-memory-web-api": "~0.16.0",
     "angular-simple-scroll-spy": "^0.0.3",
