--- a/EmotionFrontend/angular.json
+++ b/EmotionFrontend/angular.json
@@ -25,7 +25,8 @@
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
               "src/styles.css",
               "node_modules/ng-devui/devui.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           },
