--- a/EmotionFrontend/angular.json
+++ b/EmotionFrontend/angular.json
@@ -65,7 +65,7 @@
             }
           },
           "options": {
-            "proxyConfig": "src/proxy.conf.json"
+            "proxyConfig": "./proxy.conf.json"
           },
           "defaultConfiguration": "development"
         },
