--- a/EmotionFrontend/package.json
+++ b/EmotionFrontend/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "file-saver": "^2.0.5",
     "install": "^0.13.0",
     "mdb-angular-ui-kit": "^5.2.0",
     "moment": "^2.30.1",
