--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
 services:
+  nginx:
+    image: nginx:latest
+    container_name: emotion_nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf  # Custom Nginx config
+      - ./EmotionFrontend/dist/browser:/usr/share/nginx/html
+    ports:
+      - "80:80"  # Expose Nginx on port 80
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - app-network
+    restart: always
+
   frontend:
     build: ./EmotionFrontend
     container_name: emotion_frontend
-    ports:
-      - "4200:80"  # Map port 4200 to Nginx
+    # expose:
+    #   - "80"  # Map port 4200 to Nginx
     depends_on:
       - backend
     networks:
@@ -14,8 +29,8 @@ services:
     container_name: emotion_backend
     environment:
       - MONGO_URI = mongodb+srv://liangluya:liangluya@cluster0.awhbvnl.mongodb.net/Emotion?retryWrites=true&w=majority
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     depends_on:
       - mongo
     networks:
