--- a/EmotionFrontend/Dockerfile
+++ b/EmotionFrontend/Dockerfile
@@ -6,6 +6,7 @@ RUN npm install -g @angular/cli
 COPY . .
 RUN npm run build --prod
 FROM nginx:alpine
+# COPY nginx.conf /etc/nginx/nginx.conf
 COPY --from=build /app/dist/browser /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
