--- a/nginx.conf
+++ b/nginx.conf
@@ -35,18 +35,25 @@ http {
     server {
         listen 80;
 
+        location / {
+            proxy_pass http://emotion_frontend:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # location / {
-        #     try_files $uri $uri/ /index.html;
-        #     proxy_pass http://emotion_frontend:4200;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
+        #     root /usr/share/nginx/html;
+        #     try_files $uri $uri/ /index.html =404;
         # }
 
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html =404;
+        location /form/ {
+            proxy_pass http://emotion_form:80/;  # Proxy requests to the Docker service named `form`
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Reverse proxy for localhost:3000/api
@@ -57,11 +64,6 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Add CORS headers
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
-    
         }
 
     }
