--- a/EmotionFrontend/Dockerfile
+++ b/EmotionFrontend/Dockerfile
@@ -8,5 +8,6 @@ RUN npm run build --prod
 FROM nginx:alpine
 # COPY nginx.conf /etc/nginx/nginx.conf
 COPY --from=build /app/dist/browser /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
