--- a/ReportEmotionForm/Dockerfile
+++ b/ReportEmotionForm/Dockerfile
@@ -7,5 +7,6 @@ COPY . .
 RUN npm run build --prod
 FROM nginx:alpine
 COPY --from=build /app/dist/report-emotion-form/browser /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
