--- a/EmotionFrontend/package.json
+++ b/EmotionFrontend/package.json
@@ -13,17 +13,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.0.0",
-    "@angular/cdk": "^17.0.5",
-    "@angular/common": "17.0.0",
-    "@angular/compiler": "17.0.0",
-    "@angular/core": "17.0.0",
-    "@angular/forms": "17.0.0",
+    "@angular/animations": "17.1.1",
+    "@angular/cdk": "^17.1.1",
+    "@angular/common": "17.1.1",
+    "@angular/compiler": "17.1.1",
+    "@angular/core": "17.1.1",
+    "@angular/forms": "17.1.1",
     "@angular/material": "^17.0.5",
-    "@angular/platform-browser": "17.0.0",
-    "@angular/platform-browser-dynamic": "17.0.0",
-    "@angular/router": "17.0.0",
+    "@angular/platform-browser": "17.1.1",
+    "@angular/platform-browser-dynamic": "17.1.1",
+    "@angular/router": "17.1.1",
     "@ant-design/icons-angular": "^17.0.0",
+    "@ctrl/tinycolor": "^4.1.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "angular-in-memory-web-api": "~0.16.0",
     "angular-simple-scroll-spy": "^0.0.3",
@@ -47,8 +48,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "17.0.0",
-    "@angular/compiler-cli": "17.0.0",
+    "@angular/cli": "17.1.1",
+    "@angular/compiler-cli": "17.1.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^16.11.35",
     "copyfiles": "^2.4.1",
@@ -62,6 +63,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "^7.0.0",
     "ts-node": "~10.9.0",
-    "typescript": "~4.9.3"
+    "typescript": "5.2.2"
   }
 }
