--- a/EmotionFrontend/src/assets/config.json
+++ b/EmotionFrontend/src/assets/config.json
@@ -1,6 +1,5 @@
 {
-    "communityDataUrl": "https://emotion-analysis.rdc.nie.edu.sg/api/community-data/community-id",
-    "baseUrl": "https://emotion-analysis.rdc.nie.edu.sg",
-    "apiUrl": "https://emotion-analysis.rdc.nie.edu.sg/api",
-    "formUrl": "https://emotion-analysis.rdc.nie.edu.sg/form"
+    "communityDataUrl": "/api/community-data/community-id/6645ab836782b352b64ea86c",
+    "baseUrl": "",
+    "formUrl": "/form"
 }
