--- a/EmotionFrontend/nginx.conf
+++ b/EmotionFrontend/nginx.conf
@@ -34,7 +34,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name _;
 
         location / {
             root /usr/share/nginx/html;  # Path where your Angular app is built and stored
