--- a/EmotionFrontend/src/assets/config.json
+++ b/EmotionFrontend/src/assets/config.json
@@ -1,5 +1,5 @@
 {
-    "communityDataUrl": "/api/community-data/community-id/6645ab836782b352b64ea86c",
-    "baseUrl": "",
-    "formUrl": "/form"
+  "communityDataUrl": "https://emotion-analysis.rdc.nie.edu.sg/api/community-data/community-id/6645ab836782b352b64ea86c",
+  "baseUrl": "https://emotion-analysis.rdc.nie.edu.sg",
+  "formUrl": "https://emotion-analysis.rdc.nie.edu.sg/form"
 }
