--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
     environment:
       MONGO_URI: mongodb://liang:luya@mongo:27017/Emotion?retryWrites=true&w=majority
       API_HOST: https://kf6.rdc.nie.edu.sg/api/analytics/emotions/note-emotions/community-id
+      # HTTP_PROXY: http://squid:3128
+      HTTPS_PROXY: http://squid:3128
     ports:
       - "3000:3000"
     # expose:
@@ -83,6 +85,23 @@ services:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     networks:
       - app-network
+  
+  squid:
+    image: sameersbn/squid:latest
+    container_name: squid
+    restart: always
+    ports:
+      - "3128:3128"
+    volumes:
+      - ./squid.conf:/etc/squid/squid.conf
+      - squid-cache:/var/spool/squid
+      - squid-logs:/var/log/squid
+    networks:
+      - app-network
+
+volumes:
+  squid-cache:
+  squid-logs:
 
 # volumes:
 #   mongo-data:  # Persistent storage for MongoDB
