--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "A project to run both frontend and backend for emotion analysis.",
   "scripts": {
     "install-all": "npm install && cd EmotionBackend && npm install && cd ../EmotionFrontend && npm install --legacy-peer-deps",
-    "start:backend": "cd EmotionBackend && npm start",
+    "start:backend": "cross-env MONGO_URI='mongodb://liang:luya@localhost:27017/Emotion?retryWrites=true&w=majority' HTTPS_PROXY='http://squid:3128' npm start --prefix EmotionBackend",
     "start:frontend": "cd EmotionFrontend && npm start",
     "start": "npm-run-all --parallel start:backend start:frontend"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5"
   }
 }
