--- a/EmotionFrontend/src/assets/config.json
+++ b/EmotionFrontend/src/assets/config.json
@@ -1,5 +1,5 @@
 {
-  "communityDataUrl": "https://emotion-analysis.rdc.nie.edu.sg/api/community-data/community-id",
-  "baseUrl": "https://emotion-analysis.rdc.nie.edu.sg",
-  "formUrl": "https://emotion-analysis.rdc.nie.edu.sg/form"
+  "communityDataUrl": "http://localhost/api/community-data/community-id",
+  "baseUrl": "http://localhost",
+  "formUrl": "http://localhost/form"
 }
