move credentials to docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
     environment:
       MONGO_URI: mongodb://liang:luya@mongo:27017/Emotion?retryWrites=true&w=majority
       API_HOST: https://kf6.rdc.nie.edu.sg/api/analytics/emotions/note-emotions/community-id
+      RDC_USERNAME: gaoxiazhu
+      RDC_PASSWORD: Testemotionanalytics
     ports:
       - "3000:3000"
     # expose:
