Revert "fix: remove proxy configuration and update API URLs to localhost for development"
This reverts commit 75dcddcc3a1187d62e378fb26e57bd498060eb63.

--- a/EmotionFrontend/src/assets/config.json
+++ b/EmotionFrontend/src/assets/config.json
@@ -1,5 +1,5 @@
 {
-  "communityDataUrl": "http://localhost/api/community-data/community-id",
-  "baseUrl": "http://localhost",
-  "formUrl": "http://localhost/form"
+  "communityDataUrl": "https://emotion-analysis.rdc.nie.edu.sg/api/community-data/community-id",
+  "baseUrl": "https://emotion-analysis.rdc.nie.edu.sg",
+  "formUrl": "https://emotion-analysis.rdc.nie.edu.sg/form"
 }
