--- a/EmotionFrontend/package.json
+++ b/EmotionFrontend/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "17.0.0",
     "@angular/router": "17.0.0",
     "@ant-design/icons-angular": "^17.0.0",
+    "@ctrl/tinycolor": "^4.1.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "angular-in-memory-web-api": "~0.16.0",
     "angular-simple-scroll-spy": "^0.0.3",
@@ -46,7 +47,7 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.1",
+    "@angular-devkit/build-angular": "^17.3.17",
     "@angular/cli": "17.0.0",
     "@angular/compiler-cli": "17.0.0",
     "@types/jasmine": "~5.1.0",
