--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "start": "npm-run-all --parallel start:backend start:frontend"
   },
   "devDependencies": {
+    "@angular/cli": "^20.1.1",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "https-proxy-agent": "^7.0.6"
   }
 }
