--- a/EmotionBackend/package.json
+++ b/EmotionBackend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "express-session": "^1.18.2",
     "https-proxy-agent": "^7.0.6",
     "json2csv": "^6.0.0-alpha.2",
     "mongoose": "^7.6.12",
