--- a/squid.conf
+++ b/squid.conf
@@ -24,6 +24,9 @@ acl CONNECT method CONNECT
 acl rdc_domains dstdomain .rdc.nie.edu.sg
 acl rdc_domains dstdomain kf6.rdc.nie.edu.sg
 
+# Allow HTTPS CONNECT to RDC domains
+http_access allow CONNECT rdc_domains
+
 # Access rules
 http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
@@ -33,6 +36,7 @@ http_access allow localnet
 http_access allow localhost
 http_access allow rdc_domains
 http_access deny all
+http_access allow CONNECT SSL_ports
 
 # Cache configuration
 cache_dir ufs /var/spool/squid 100 16 256
